@@ -1,11 +1,11 @@
 /*
- * $Id: qregex.c,v 1.32 2022-10-09 23:00:03+05:30 Cprogrammer Exp mbhangui $
+ * $Id: qregex.c,v 1.33 2023-09-27 13:20:37+05:30 Cprogrammer Exp mbhangui $
  *
  * qregex (v2)
  * Author  : Evan Borgstrom (evan at unixpimps dot org)
  * Created : 2001/12/14 23:08:16
- * Modified: $Date: 2022-10-09 23:00:03+05:30 $
- * Revision: $Revision: 1.32 $
+ * Modified: $Date: 2023-09-27 13:20:37+05:30 $
+ * Revision: $Revision: 1.33 $
  *
  * Do POSIX regex matching on addresses for anti-relay / spam control.
  * It logs to the maillog
@@ -38,9 +38,6 @@
  * Original qregex patch written by:
  *	Evan Borgstrom
  *	evan at unixpimps dot org
- * Note: this revision follows the coding guidelines set forth by the rest of
- *       the qmail code and that described at the following URL.
- *       http://cr.yp.to/qmail/guarantee.html
  */
 #include <sys/types.h>
 #include <unistd.h>
@@ -241,7 +238,7 @@ regex_match(stralloc *addr, stralloc *map, char **errStr)
 void
 getversion_qregex_c()
 {
-	static char    *x = "$Id: qregex.c,v 1.32 2022-10-09 23:00:03+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: qregex.c,v 1.33 2023-09-27 13:20:37+05:30 Cprogrammer Exp mbhangui $";
 
 	x = sccsidwildmath;
 	x++;
@@ -249,6 +246,9 @@ getversion_qregex_c()
 
 /*
  * $Log: qregex.c,v $
+ * Revision 1.33  2023-09-27 13:20:37+05:30  Cprogrammer
+ * updated comments
+ *
  * Revision 1.32  2022-10-09 23:00:03+05:30  Cprogrammer
  * moved RCS log to bottom
  *
